# ft_printf

./: .gitignore  CMakeLists.txt  Makefile  WdoubleW  __.SYMDEF SORTED  a.out  all_flagsspec.c  author  buffer.c  buffer2.c  double.c  double_float.c  free_dd.c  ft_printf  ft_printf.h  i_flags.c  i_flags1.c  l_ll_h_hh_for_i.c  l_ll_h_hh_for_o.c  l_ll_h_hh_for_u.c  l_ll_h_hh_for_x.c  long_double.c  main.c  make_ox_for_any.c  mane.c  manman.c  mitmit  none_infinity.c  o_flags.c  o_flags1.c  old_main_functions.c  parsing_and_flags.c  preparce_for_flags.c  print_float.c  printf  rslt_trace.txt  shshshs.sh  str_calc.c  str_calc_extra.c  strcalc  (+3 more)
a.out.dSYM/Contents/Resources/DWARF/: a.out
ft_printf.dSYM/Contents/Resources/DWARF/: ft_printf
libft/: Makefile  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_catstr.c  ft_fibonacci.c  ft_is_sort.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base_big.c  ft_itoa_base_big_h.c  ft_itoa_base_big_hh.c  ft_itoa_base_big_l.c  ft_itoa_base_big_ll.c  ft_itoa_base_small.c  ft_itoa_base_small_h.c  ft_itoa_base_small_hh.c  ft_itoa_base_small_l.c  ft_itoa_base_small_ll.c  ft_itoa_h.c  ft_itoa_hh.c  ft_itoa_l.c  ft_itoa_ll.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  (+50 more)
printf/: CMakeLists.txt  Makefile  a.out  main.c  sh_ft_printf.sh
printf/includes/: ft_printf.h
printf/srcs/: extra_calc.c  ft_extra_double.c  ft_extra_int.c  ft_extra_oxXunsigned.c  ft_printf.c  ft_printf_char.c  ft_printf_double.c  ft_printf_int.c  ft_printf_octo.c  ft_printf_str.c  ft_printf_unsigned.c  ft_printf_x.c  str_calc.c
srcs/: Makefile  all_flagsspec.c  buffer.c  buffer2.c  double.c  double_float.c  free_dd.c  ft_printf.h  i_flags.c  i_flags1.c  i_flags2.c  l_ll_h_hh_for_i.c  l_ll_h_hh_for_o.c  l_ll_h_hh_for_u.c  l_ll_h_hh_for_x.c  long_double.c  main.c  make_ox_for_any.c  make_str_with_precision_for_any.c  none_infinity.c  o_flags.c  o_flags1.c  parsing_and_flags.c  preparce_for_flags.c  print_float.c  str_calc.c  str_calc_extra.c  u_flags.c  x_flags.c  x_flags1.c
