cmake_minimum_required(VERSION 3.14)
project(printf C)

set(CMAKE_C_STANDARD 11)

include_directories(libft)
include_directories(srcs)

add_executable(printf
        libft/ft_atoi.c
        libft/ft_atoi_base.c
        libft/ft_bzero.c
        libft/ft_catstr.c
        libft/ft_fibonacci.c
        libft/ft_is_sort.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_itoa_base_big.c
        libft/ft_itoa_base_big_h.c
        libft/ft_itoa_base_big_hh.c
        libft/ft_itoa_base_big_l.c
        libft/ft_itoa_base_big_ll.c
        libft/ft_itoa_base_small.c
        libft/ft_itoa_base_small_h.c
        libft/ft_itoa_base_small_hh.c
        libft/ft_itoa_base_small_l.c
        libft/ft_itoa_base_small_ll.c
        libft/ft_itoa_h.c
        libft/ft_itoa_hh.c
        libft/ft_itoa_l.c
        libft/ft_itoa_ll.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_recursive_factorial.c
        libft/ft_recursive_power.c
        libft/ft_sqrt.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strchr_n.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strrejoin.c
        libft/ft_strrev.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_utoa.c
        libft/ft_utoa_h.c
        libft/ft_utoa_hh.c
        libft/ft_utoa_l.c
        libft/ft_utoa_ll.c
        libft/get_next_line.c
        libft/libft.h
        srcs/all_flagsspec.c
        srcs/buffer.c
        srcs/double.c
        srcs/free_dd.c
        srcs/ft_printf.h
        srcs/l_ll_h_hh_for_i.c
        srcs/l_ll_h_hh_for_o.c
        srcs/l_ll_h_hh_for_u.c
        srcs/l_ll_h_hh_for_x.c
        srcs/long_double.c
        srcs/main.c
        srcs/make_ox_for_any.c
        srcs/make_str_with_precision_for_any.c
        srcs/none_infinity.c
        srcs/parsing_and_flags.c
        srcs/preparce_for_flags.c
        srcs/print_float.c
        srcs/str_calc.c
        srcs/str_calc_extra.c
        mane.c
        stringmath.c)
